2006-09-06  Jakub Jelinek  <jakub@redhat.com>

	* locale/programs/ld-collate.c (collate_read): Goto sym_equiv_free
	rather than col_sym_free.  Move seqp declaration earlier.

	* resolv/gai_suspend.c (gai_suspend): Make sure result is initialized.

2006-09-05  Jakub Jelinek  <jakub@redhat.com>

	* nscd/initgrcache.c (addinitgroupsX): Move any_success
	decl before first goto out.

2006-09-04  Jakub Jelinek  <jakub@redhat.com>

	* Makerules (shlib.lds): If have-hash-style, put .hash section
	at the end of the RO segment.

2006-09-04  Ulrich Drepper  <drepper@redhat.com>

	* elf/do-lookup.h (do_lookup_x): Initialize symidx in case the new
	style hash table format is used.

2006-09-04  Jakub Jelinek  <jakub@redhat.com>

	* resolv/res_mkquery.c (res_nmkquery): Set hp->id to statp->id after
	randomization rather than before.
	* resolv/res_init.c (res_randomid): Don't call gettimeofday here.

2006-08-31  Jakub Jelinek  <jakub@redhat.com>

	* dlfcn/Makefile (LDLIBS-bug-atexit3-lib.so): Add
	ld.so.

	* malloc/malloc.c (_int_malloc): Use full list insert and not
	shortcut which assumes the list is empty for large requests
	too.

	* elf/tst-addr1.c (do_test): Allow i.dli_sname "_IO_printf".

2006-08-30  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/bits/fcntl.h (splice): Add offin
	and offout arguments to the prototype.
	* sysdeps/unix/sysv/linux/s390/bits/fcntl.h (splice): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/fcntl.h (splice): Likewise.
	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h (splice): Likewise.
	* sysdeps/unix/sysv/linux/sh/bits/fcntl.h (splice): Likewise.
	* sysdeps/unix/sysv/linux/i386/bits/fcntl.h (splice): Likewise.
	* sysdeps/unix/sysv/linux/ia64/bits/fcntl.h (splice): Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/fcntl.h (splice): Likewise.
	* sysdeps/unix/sysv/linux/syscalls.list (splice): Adjust args string.

2006-08-28  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (_dl_init_paths): Expand DSTs.
